Added version on composer.json based on etc/module.xml
Composer.json needs to have a version because if someone wants to use it this package with composer it will not work correctly

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "searchspring/module-feed",
     "description": "Module to generate a SearchSpring CSV Feed",
     "type": "magento2-module",
+    "version": "1.0.1",
     "license": "GPL-3.0",
     "authors": [
         {
