--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
     "description": "Module to generate a SearchSpring CSV Feed",
     "type": "magento2-module",
     "version": "1.1.4",
-    "license": "GPL-3.0",
-    "test": "vendor/bin/phpunit",
+    "license": "GPL-3.0-or-later",
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "authors": [
         {
             "email": "james@searchspring.com",
