--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     ],
     "minimum-stability": "dev",
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^7"
+    },
     "autoload": {
         "files": [
             "registration.php"
