--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "minimum-stability": "dev",
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "9.2"
     },
     "autoload": {
         "files": [
