--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,19 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "magento/framework": "*",
+        "magento/module-catalog": "*",
+        "magento/module-catalog-inventory": "*",
+        "magento/module-configurable-product": "*",
+        "magento/module-customer": "*",
+        "magento/module-eav": "*",
+        "magento/module-grouped-product": "*",
+        "magento/module-review": "*",
+        "magento/module-sales": "*",
+        "magento/module-store": "*",
+        "magento/module-swatches": "*"
+    },
     "autoload": {
         "files": [
             "registration.php"
